Adicionado coisas que sumiram

--- a/ProjetoFinal/Base.lproj/Main.storyboard
+++ b/ProjetoFinal/Base.lproj/Main.storyboard
@@ -61,6 +61,14 @@
                                     <segue destination="sIv-jj-fJc" kind="embed" id="eLg-Xe-wVQ"/>
                                 </connections>
                             </containerView>
+                            <containerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OXK-BK-hbe">
+                                <rect key="frame" x="152" y="-31" width="551" height="657"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                <connections>
+                                    <segue destination="tQW-Gq-m4D" kind="embed" id="UVT-Az-0Pb"/>
+                                </connections>
+                            </containerView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
@@ -117,6 +125,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="byk-aF-pSr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1681" y="1359"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="dzV-zg-u19">
+            <objects>
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="tQW-Gq-m4D" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="UmD-ev-9Sw"/>
+                        <viewControllerLayoutGuide type="bottom" id="xUr-Ao-Cuu"/>
+                    </layoutGuides>
+                    <view key="view" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="KXY-22-dt8">
+                        <rect key="frame" x="0.0" y="0.0" width="551" height="657"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <toolbarItems/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5sD-gj-Hhq" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1879" y="-502"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
